src/snapshots/pdm__ui__tests__bitcoin_status_tab_logs_render.snap
---
source: src/ui.rs
expression: terminal.backend()
---
TestBackend {
    buffer: Buffer {
        area: Rect { x: 0, y: 0, width: 80, height: 24 },
        content: [
            "┌ PDM ──────────────────┐┌ Status ─────────────────────────────────────────────┐",
            "│Home                   ││ Chain Info │ System │ Logs │ Peers                  │",
            "│Bitcoin Config         ││                                                     │",
            "│Bitcoin Status         │└─────────────────────────────────────────────────────┘",
            "│P2Pool Config          │┌─────────────────────────────────────────────────────┐",
            "│P2Pool Status          ││Logs                                                 │",
            "│LN Config              ││                                                     │",
            "│LN Status              ││                                                     │",
            "│Shares Market          ││                                                     │",
            "│Settings               ││                                                     │",
            "│                       ││                                                     │",
            "│                       ││                                                     │",
            "│                       ││                                                     │",
            "│                       ││                                                     │",
            "│                       ││                                                     │",
            "│                       ││                                                     │",
            "│                       ││                                                     │",
            "│                       ││                                                     │",
            "│                       ││                                                     │",
            "│                       ││                                                     │",
            "│                       ││                                                     │",
            "│                       ││                                                     │",
            "└───────────────────────┘└─────────────────────────────────────────────────────┘",
            " ↑↓  Navigate sidebar   ←→  Switch tab   q  Quit                                ",
        ],
        styles: [
            x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 49, y: 1, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
            x: 53, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 1, y: 3, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
            x: 24, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 0, y: 23, fg: White, bg: DarkGray, underline: Reset, modifier: NONE,
            x: 4, y: 23, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
            x: 23, y: 23, fg: White, bg: DarkGray, underline: Reset, modifier: NONE,
            x: 27, y: 23, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
            x: 40, y: 23, fg: White, bg: DarkGray, underline: Reset, modifier: NONE,
            x: 43, y: 23, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
            x: 50, y: 23, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        ]
    },
    scrollback: Buffer {
        area: Rect { x: 0, y: 0, width: 80, height: 0 }
    },
    cursor: false,
    pos: (
        0,
        0,
    ),
}
